2008-11-05  Deepak Bhole  <dbhole@redhat.com>

	* patches/icedtea-copy-plugs.patch: Add netscape.* classes to rt.jar when
	building with an alternate jar application.

2008-11-05  Deepak Bhole  <dbhole@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/JNLPClassLoader.java: Correct
	indentation from last commit, remove debug output.

2008-11-05  Gary Benson  <gbenson@redhat.com>

	* contrib/mixtec-hacks.patch: new file.

2008-11-04  Deepak Bhole  <dbhole@redhat.com>

	* rt/net/sourceforge/jnlp/runtime/JNLPClassLoader.java: Dynamically load
	files from the index.

2008-11-04  Gary Benson  <gbenson@redhat.com>

	* ports/hotspot/src/share/vm/shark/sharkRuntime.hpp
	(SharkRuntime::_f2i): New constant.
	(SharkRuntime::_f2l): Likewise.
	(SharkRuntime::_d2i): Likewise.
	(SharkRuntime::_d2l): Likewise.
	(SharkRuntime::f2i): New accessor.
	(SharkRuntime::f2l): Likewise.
	(SharkRuntime::d2i): Likewise.
	(SharkRuntime::d2l): Likewise.
	* ports/hotspot/src/share/vm/shark/sharkRuntime.cpp
	(SharkRuntime::_f2i): New constant.
	(SharkRuntime::_f2l): Likewise.
	(SharkRuntime::_d2i): Likewise.
	(SharkRuntime::_d2l): Likewise.
	(SharkRuntime::initialize): Initialize the above.
	* ports/hotspot/src/share/vm/shark/sharkBlock.hpp
	(SharkBlock::call_vm_leaf): New method.
	* ports/hotspot/src/share/vm/shark/sharkBlock.cpp
	(SharkBlock::parse): Use runtime calls for f2i, f2l, d2i and d2l.

2008-11-04  Omair Majid  <omajid@redhat.com>

	* Makefile.am (stamps/pulse-java.stamp): Link in libpulse.so after all
	the object files that use it.
	* pulseaudio/unittests/org/classpath/icedtea/pulseaudio/PulseAudioSourceDataLineTest.java
	(testWriteIntegralNumberFrames): New function. Tests that a SourceDataLine
	will only write an integral number of frames.
	(testWriteNegativeLength): New function. Tests that a
	SourceDataLine.write() wont accept a negative length.
	(testWriteNegativeOffset): New function. Tests that a
	SourceDataLine.write() will not accept a negative offset.